<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/equisite_primary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.RegisterFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/equisite_logo" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/cardview_background"
        android:hint="@string/first_name"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/cardview_background"
        android:textColorHint="@color/cardview_background"
        android:textSize="16sp"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/cardview_background"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/cardview_background"
        android:textColorHint="@color/cardview_background"
        android:textSize="16sp"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/cardview_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/cardview_background"
        android:textColorHint="@color/cardview_background"
        android:textSize="16sp"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/cardview_background"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/cardview_background"
        android:textColorHint="@color/cardview_background"
        android:textSize="16sp"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/cardview_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/cardview_background"
        android:textColorHint="@color/cardview_background"
        android:textSize="16sp"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/fly_with_us"
        android:textColor="@color/motto_color" />

</LinearLayout>